Fix price spacing on CartItem for desktop

--- a/src/ui/components/CartItem/styles.css
+++ b/src/ui/components/CartItem/styles.css
@@ -43,6 +43,6 @@ img.delete-product-btn {
 
 @media only screen and (min-width: 1200px) {
   .cart-item-price {
-    width: 250px;
+    min-width: 5em;
   }
 }
